--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./assets/v1/css/style.css">
     <link rel="stylesheet" href="./assets/v1/css/osint-navbar.css">
     <link rel="icon" href="./assets/v1/assets/icons/favicon.ico">
-    <title>Nokturn - W/ OSINT Search Engine</title>
+    <title>Panic Sonda Search Engine</title>
     
 </head>
 
@@ -45,7 +45,7 @@
         </div>
 
         <div class="circle-shadow"></div>
-            <a href="https://github.com/yonasuriv/nokturn" target="_blank">
+            <a href="https://github.com/yonasuriv" target="_blank">
                 <img id="github-footer" src="assets/icons/github.png" alt="GitHub">
             </a>
         </div>
