--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/default/css/style.css">
-    <link rel="stylesheet" href="./assets/default/css/osint-navbar.css">
-    <link rel="icon" href="./assets/default/icons/favicon.png">
+    <link rel="stylesheet" href="assets/default/css/style.css">
+    <link rel="stylesheet" href="assets/default/css/osint-navbar.css">
+    <link rel="icon" href="assets/default/icons/favicon.png">
     <title>Panic Sonda Search Engine</title>
     
 </head>
 
 <body>
     <div class="navbar">
-        <script src="./assets/default/js/osint-navbar.js" defer></script>
+        <script src="assets/default/js/osint-navbar.js" defer></script>
         <ul id="menu">
             <!-- Menu will be dynamically generated here -->
         </ul>
@@ -46,11 +46,11 @@
 
         <div class="circle-shadow"></div>
             <a href="https://github.com/yonasuriv" target="_blank">
-                <img id="github-footer" src="./assets/default/icons/github.png" alt="GitHub">
+                <img id="github-footer" src="assets/default/icons/github.png" alt="GitHub">
             </a>
         </div>
     </div>
-    <script src="./assets/default/js/search-focus.js" defer></script>
+    <script src="assets/default/js/search-focus.js" defer></script>
     <footer>
         
     </footer>
