--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/default/css/style.css">
     <link rel="stylesheet" href="assets/default/css/osint-navbar.css">
     <link rel="icon" href="assets/default/icons/favicon.png">
-    <title>Panic Sonda Search Engine</title>
+    <title>Panic Sonda - OSINT Search Engine</title>
     
 </head>
 
