--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 <li><a href="https://gchq.github.io/CyberChef/">Cyber Chef</a></li>
                 <li><a href="https://www.revshells.com/">Rev Shells</a></li>
                 <li><a href="https://pentestbook.six2dez.com/">Pentest Book</a></li>
-                <li><a href="https://github.com/royharoush/rtools">Pentest Tools</a></li>
+                <li><a href="https://www.exploit-db.com/">Exploit Database</a></li>
+                <li><a href="https://security.snyk.io/">Vulnerability Database</a></li>
+                <!--<li><a href="https://github.com/royharoush/rtools">Pentest Tools</a></li>-->
             </ul>
         </div>
         <div id="menu-right">
